<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/incid_edit_importancia_block"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/baseLayout"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <!--Rótulo -->
    <TextView
        android:id="@+id/incid_importancia_rot"
        style="@style/textBase.textFieldLabel1"
        android:text="@string/incid_importancia_user_rot"
        />
    <!-- Selección importancia-->
    <Spinner
        android:id="@+id/incid_reg_importancia_spinner"
        style="@style/spinnerBase"
        />
</LinearLayout>