...
        <TextView
            android:id="@+id/reg_usuario_rotulo"
            style="@style/textBase.textPageLabel1"
            android:text="@string/login_ac_rotulo"/>

        <EditText
            android:id="@+id/reg_usuario_email_editT"
            style="@style/textBase.editField.email"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/reg_usuario_password_ediT"
            style="@style/textBase.editField.password"
            tools:ignore="LabelFor"/>

        <Button
            android:id="@+id/login_ac_button"
            style="@style/textBase.acButton1"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_ac_button_txt"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/login_help_fab"
...
