...
    <!-- ============================= MENUS ================================= -->
    <string name="delete_me_ac_mn">Borrar tus datos</string>
    <string name="login_ac_mn">Login</string>
    <string name="password_change_ac_mn">Renovar contraseña</string>
    <string name="user_data_ac_mn">Tu usuario</string>
    <!-- ============================ MESSAGES ============================== -->
    <string name="send_password_by_mail_dialog">¿Deseas que te enviemos una nueva contraseña por correo electrónico?</string>
    <string name="send_password_by_mail_YES">Enviádmela</string>
    <string name="send_password_by_mail_NO">No la enviéis</string>
    <string name="login_wrong_no_mail">"Busca tu comunidad y regístrate.\nSi no existe, regístrala en 'Nueva comunidad'."</string>
    <string name="password_wrong">La contraseña no se corresponde con tu usuario.\nSi no la recuerdas,
        selecciona en el menú la opción para renovarla.</string>
    <string name="password_wrong_in_login">La contraseña no se corresponde con tu usuario.</string>
    <string name="password_new_in_login">Te hemos enviado tu nueva contraseña. Haz login, nuevamente, con ella.</string>
    <string name="user_without_signedUp">"Haz login. O busca tu comunidad y regístrate.\nSi no existe, regístrala en 'Nueva comunidad'."</string>
    <string name="user_data_not_modified_msg">No hemos podido modificar tus datos.</string>
    <!-- ================= DeleteMeAc ===================== -->
    <string name="delete_me_ac_label">Borrar tus datos</string>
    <string name="delete_me_ac_unreg_rot_txt">¿Deseas eliminar tus datos en Didekin?</string>
    <string name="delete_me_ac_unreg_button_txt">Sí, borrad todos mis datos</string>
    <!--================= LoginAc =================== -->
...
